<resources>
    <string name="app_name">Casino</string>
    <string name="about_game">About the game</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="version">Version : 0.6.7 BETA</string>
    <string name="author">Author : Semyon Novikov</string>
    <string name="cards">Cards</string>
    <string name="choose_game">Choose the game :</string>
    <string name="choose_text_size">"Choose text size</string>
    <string name="hurray">Hurray!</string>
    <string name="win">You win </string>
    <string name="balance">Balance :</string>
    <string name="language">Language</string>
    <string name="text_size">Text size</string>
    <string name="choose_language">Choose language</string>
    <string name="app_full_name">Simulator Casino</string>
    <string name="rules">Rules</string>
    <string name="bet">Bet :</string>
    <string name="set_bet">Input the bet</string>
    <string name="rules_game_cards">If all cards are the same you will get x5,
        otherwise, the balance will decrease by the amount of your bet.
    </string>
    <string name="wait_game">Wait until the game is over!</string>
    <string name="not_enough_money">Not enough money!</string>
    <string name="rules_game_777">If 5 cards are the same you will get x15,\n4 cards - x10, 3 cards - x3 , otherwise, the balance will decrease by the amount of your bet.
    </string>
    <string name="crypto">Crypto</string>
    <string name="rules_game_crypto">If 6 images are the same \nyou will get x20 \n5 - x15, 4 - x7, 3 - x3.
        \nAlso there are some secrets combinations.
    </string>
    <string name="bet_very_low">Min bet is 1$!</string>
    <string name="github">This project on GitHub</string>
    <string name="new_money">Your balance now is 100$</string>
    <string name="new_money_get">Update balance to 100$</string>v
    <string name="balance_more_than_zero">Your balance more than 0$!</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="welcome">Welcome!</string>
    <string name="CreateNickname">"Your should create nickname for rating!"</string>
    <string name="rating">Rating</string>
</resources>