<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="btn_new_balance"
        android:title="@string/new_money_get" />

    <ListPreference
        android:dialogTitle="@string/choose_language"
        android:entries="@array/languages"
        android:entryValues="@array/languages"
        android:key="language"
        android:title="@string/language" />

    <ListPreference
        android:defaultValue="1.0"
        android:dialogTitle="@string/choose_text_size"
        android:entries="@array/text_size"
        android:entryValues="@array/text_size"
        android:key="text_size"
        android:title="@string/text_size" />

    <Preference
        android:key="github_link"
        android:title="@string/github" />

    <Preference android:title="@string/version" />

    <Preference android:title="@string/author" />

</PreferenceScreen>