<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/choose_game"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="33sp"/>

        <Button
            android:id="@+id/btn_game_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cards"
            android:textSize="25sp"
            android:drawableStart="@drawable/game_cards" />

        <Button
            android:id="@+id/btn_game_777"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="777"
            android:textSize="25sp"
            android:drawableStart="@drawable/game_777" />

        <Button
            android:id="@+id/btn_game_crypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crypto"
            android:textSize="25sp"
            android:drawableStart="@drawable/game_crypto" />
</LinearLayout>
</ScrollView>