<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/balance"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/text_balans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="$"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic1" />

        <ImageView
            android:id="@+id/pic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic2" />

        <ImageView
            android:id="@+id/pic3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic3" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5sp"
        android:background="@color/colorPrimaryDark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pic4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic4" />


        <ImageView
            android:id="@+id/pic5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic5" />

        <ImageView
            android:id="@+id/pic6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/game3pic6" />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="7sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bet"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="35sp" />

        <EditText
            android:textSize="35sp"
            android:id="@+id/bet_edit"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/x2"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/half"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="/2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/min"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="MIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/max"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="MAX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_rules"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/rules"
                    android:text="@string/rules"
                    android:textSize="20sp" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>